--- a/www/.env.development
+++ b/www/.env.development
@@ -4,3 +4,4 @@ WORDPRESS_EMAIL=gatsby+test+egghead@killersite.com
 WORDPRESS_PASSWORD=n6w#d$5WuqV,4b*
 SHOPIFY_ACCESS_TOKEN=40843d58bda8400a6d50eb41410cfe12
 GATSBY_SHOPIFY_ACCESS_TOKEN=40843d58bda8400a6d50eb41410cfe12
+GATSBY_SHOPIFY_DOMAIN=shop-supply-store.myshopify.com
